--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "google-protobuf": "^3.21.2",
     "jwt-decode": "^3.1.2",
     "protobufjs": "^7.1.2"
+  },
+  "devDependencies": {
+    "@aserto/ts-linting-configs": "^2.5.0",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
