--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "aserto-node",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "main": "dist/index.js",
   "types": "lib/index.d.ts",
   "author": "Roie Schwaber-Cohen <roie@aserto.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "jest test --coverage"
   },
   "files": [
     "lib"
   ],
+  "imports": {
+    "@lib": "./lib"
+  },
   "dependencies": {
     "@aserto/node-authorizer": "https://github.com/aserto-dev/node-authorizer",
     "@grpc/grpc-js": "^1.7.1",
-    "@types/express": "^4.17.14",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
     "jwt-decode": "^3.1.2",
@@ -22,6 +25,14 @@
   },
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
+    "@types/jest": "^29.1.2",
+    "@types/express": "^4.17.14",
+    "axios": "^1.1.3",
+    "axios-mock-adapter": "^1.21.2",
+    "dotenv": "^16.0.3",
+    "jest": "^29.2.0",
+    "node-mocks-http": "^1.11.0",
+    "ts-jest": "^29.0.3",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
