--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
-    "@types/jest": "^29.1.2",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.1.3",
     "axios-mock-adapter": "^1.21.2",
     "dotenv": "^16.0.3",
