--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc --build",
-    "test": "jest test --coverage"
+    "test": "jest test --coverage",
+    "find-deadcode": "ts-prune"
   },
   "files": [
     "lib"
@@ -34,6 +35,7 @@
     "jest": "^29.2.0",
     "node-mocks-http": "^1.11.0",
     "ts-jest": "^29.0.3",
+    "ts-prune": "^0.10.3",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
