--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@aserto/node-authorizer": "https://github.com/aserto-dev/node-authorizer",
+    "@aserto/node-directory": "https://github.com/ogazitt/node-directory-v2",
     "@grpc/grpc-js": "^1.7.1",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
