--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-authorizer": "https://github.com/aserto-dev/node-authorizer.git",
-    "@aserto/node-directory": "https://github.com/aserto-dev/node-directory-v2",
+    "@aserto/node-authorizer": "^0.20.4",
+    "@aserto/node-directory": "^0.0.9",
     "@grpc/grpc-js": "^1.7.1",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
