--- a/package.json
+++ b/package.json
@@ -38,15 +38,19 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
+    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
     "@aserto/node-authorizer": "^0.20.4",
-    "@aserto/node-directory": "^0.20.6",
     "@grpc/grpc-js": "^1.8.12",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
     "jwt-decode": "^3.1.2",
-    "protobufjs": "^7.2.2"
+    "protobufjs": "^7.2.2",
+    "@bufbuild/connect": "^0.8.6",
+    "@bufbuild/connect-node": "^0.8.6",
+    "@bufbuild/protobuf": "^1.2.0"
   },
   "devDependencies": {
+    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
     "@aserto/ts-linting-configs": "^2.5.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
