--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Aserto",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --build",
-    "format": "prettier --write src",
+    "build": "rm -rf dist && tsc --build",
+    "format": "prettier --write lib",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "push": "scripts/publish.sh",
     "test": "jest test --coverage",
@@ -38,16 +38,16 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
     "@aserto/node-authorizer": "^0.20.4",
+    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
+    "@bufbuild/connect": "^0.8.6",
+    "@bufbuild/connect-node": "^0.8.6",
+    "@bufbuild/protobuf": "^1.2.0",
     "@grpc/grpc-js": "^1.8.12",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
     "jwt-decode": "^3.1.2",
-    "protobufjs": "^7.2.2",
-    "@bufbuild/connect": "^0.8.6",
-    "@bufbuild/connect-node": "^0.8.6",
-    "@bufbuild/protobuf": "^1.2.0"
+    "protobufjs": "^7.2.2"
   },
   "devDependencies": {
     "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
