use released node-directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noUncheckedIndexedAccess": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "lib": ["esnext"]
   },
   "exclude": ["./node_modules"],
   "include": ["lib/**/*.ts"]
