--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
     "@aserto/node-authorizer": "^0.20.4",
-    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
+    "@aserto/node-directory": "^0.21.0",
     "@bufbuild/connect": "^0.8.6",
     "@bufbuild/connect-node": "^0.8.6",
     "@bufbuild/protobuf": "^1.2.0",
@@ -50,7 +50,6 @@
     "protobufjs": "^7.2.2"
   },
   "devDependencies": {
-    "@aserto/node-directory": "git+https://github.com/aserto-dev/node-directory.git#protobuf-es",
     "@aserto/ts-linting-configs": "^2.5.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
