--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   "dependencies": {
     "@aserto/node-authorizer": "^0.20.4",
     "@aserto/node-directory": "^0.21.0",
-    "@bufbuild/connect": "^0.9.0",
-    "@bufbuild/connect-node": "^0.8.6",
-    "@bufbuild/protobuf": "^1.2.0",
+    "@bufbuild/connect": "^0.10.0",
+    "@bufbuild/connect-node": "^0.10.0",
+    "@bufbuild/protobuf": "^1.2.1",
     "@grpc/grpc-js": "^1.8.12",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
@@ -51,9 +51,11 @@
   },
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
+    "@babel/core": "^7.22.5",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/jwt-decode": "^3.1.0",
+    "@types/node": "^20.3.1",
     "axios": "^1.1.3",
     "axios-mock-adapter": "^1.21.2",
     "dotenv": "^16.0.3",
