--- a/package.json
+++ b/package.json
@@ -43,11 +43,10 @@
     "@bufbuild/connect": "^0.10.0",
     "@bufbuild/connect-node": "^0.10.0",
     "@bufbuild/protobuf": "^1.2.1",
-    "@grpc/grpc-js": "^1.8.12",
+    "@grpc/grpc-js": "^1.8.15",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
-    "jwt-decode": "^3.1.2",
-    "protobufjs": "^7.2.2"
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
