--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-authorizer": "^0.20.4",
-    "@aserto/node-directory": "^0.21.1",
+    "@aserto/node-authorizer": "^0.20.5",
+    "@aserto/node-directory": "^0.21.3",
     "@bufbuild/connect": "^0.10.0",
     "@bufbuild/connect-node": "^0.10.0",
     "@bufbuild/protobuf": "^1.2.1",
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
     "@babel/core": "^7.22.5",
+    "@types/google-protobuf": "^3.15.6",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/node": "^20.3.1",
