--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.5.0",
     "@babel/core": "^7.22.5",
-    "@types/google-protobuf": "^3.15.6",
     "@types/express": "^4.17.14",
+    "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^29.1.2",
     "@types/node": "^20.3.1",
     "axios": "^1.1.3",
@@ -63,7 +63,6 @@
     "prettier": "^2.5.1",
     "ts-jest": "^29.0.3",
     "ts-prune": "^0.10.3",
-    "typescript": "^4.5.4",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "typescript": "^4.5.4"
   }
 }
