--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -59,3 +59,6 @@ jobs:
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/coverage-final.json
+
