--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
     "@aserto/node-authorizer": "^0.20.6",
-    "@aserto/node-directory": "^0.21.3",
-    "@bufbuild/connect": "^0.10.0",
-    "@bufbuild/connect-node": "^0.10.0",
-    "@bufbuild/protobuf": "^1.2.1",
+    "@aserto/node-directory": "^0.30.0",
+    "@bufbuild/protobuf": "^1.4.2",
+    "@connectrpc/connect": "^1.1.3",
+    "@connectrpc/connect-node": "^1.1.3",
     "@grpc/grpc-js": "^1.8.17",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
