--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-authorizer": "^0.20.6",
-    "@aserto/node-directory": "^0.30.0",
+    "@aserto/node-authorizer": "^v0.20.7",
+    "@aserto/node-directory": "^0.30.1",
     "@bufbuild/protobuf": "^1.4.2",
     "@connectrpc/connect": "^1.1.3",
     "@connectrpc/connect-node": "^1.1.3",
-    "@grpc/grpc-js": "^1.8.17",
+    "@grpc/grpc-js": "1.8.21",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
     "jwt-decode": "^3.1.2"
@@ -58,7 +58,14 @@
     "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^29.1.2",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "jest": "^29.7.0",
     "njwt": "^2.0.0",
     "node-mocks-http": "^1.13.0",
