--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,10 +36,16 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Use Node.js 16.x
+      - name: Use Node.js 19.x
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '19.x'
+
+      - name: Set up Homebrew
+        uses: Homebrew/actions/setup-homebrew@master
+
+      - name: Install topaz
+        run: brew tap aserto-dev/tap && brew install aserto-dev/tap/topaz && topaz install
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
