--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint lib --max-warnings=0",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "push": "scripts/publish.sh",
+    "release": "scripts/release.sh",
     "test": "jest test --coverage --verbose"
   },
   "files": [
