--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-authorizer": "https://github.com/aserto-dev/node-authorizer#update_build",
+    "@aserto/node-authorizer": "^0.20.8",
     "@aserto/node-directory": "^0.31.1",
     "@bufbuild/protobuf": "^1.4.2",
     "@connectrpc/connect": "^1.1.3",
