--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "lib": ["esnext"]
   },
   "exclude": ["./node_modules"],
-  "include": ["lib/**/*.ts", "lib/main.ts"]
+  "include": ["lib/**/*.ts"]
 }
