--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "dotenv": "^16.0.3",
@@ -69,6 +70,7 @@
     "njwt": "^2.0.0",
     "node-mocks-http": "^1.13.0",
     "prettier": "^2.5.1",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.0.3",
     "ts-prune": "^0.10.3",
     "typescript": "^4.5.4"
