--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -62,7 +62,7 @@ jobs:
 
       - run: yarn install --immutable
       - name: tests
-        run: yarn --verbose test --verbose
+        run: yarn test --verbose
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
