--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc --build",
     "check": "tsc --noEmit",
-    "detect-unused-exports": "scripts/detect-unused-exports.sh",
+    "detect-unused-exports": "knip --include exports,types,nsExports,nsTypes",
     "dev:checks": "yarn lint --fix && yarn tsc && yarn detect-unused-exports && yarn test",
     "format": "prettier --write lib",
     "lint": "eslint lib --max-warnings=0",
@@ -67,6 +67,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "jest": "^29.7.0",
+    "knip": "^5.24.3",
     "njwt": "^2.0.0",
     "node-mocks-http": "^1.13.0",
     "prettier": "^2.5.1",
