--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,9 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
+
 npmAuthToken: "${NODE_AUTH_TOKEN:-default}"
 
 yarnPath: .yarn/releases/yarn-4.3.1.cjs
