--- a/package.json
+++ b/package.json
@@ -48,33 +48,36 @@
     "@bufbuild/protobuf": "^1.10.0",
     "@connectrpc/connect": "^1.5.0",
     "@connectrpc/connect-node": "^1.5.0",
-    "express": "^4.21.0",
-    "jwt-decode": "^3.1.2"
+    "express": "^4.21.1",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@aserto/ts-linting-configs": "^2.7.0",
     "@babel/core": "^7.25.2",
+    "@eslint/compat": "^1.2.2",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^20.16.7",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-typescript-sort-keys": "^3.2.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-typescript-sort-keys": "^3.3.0",
     "jest": "^29.7.0",
     "knip": "^5.30.5",
     "njwt": "^2.0.1",
     "node-mocks-http": "^1.16.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-prune": "^0.10.3",
     "typescript": "^4.9.5"
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.5.1"
 }
