--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,3 +39,25 @@ jobs:
 
       - run: yarn install --immutable
       - run: yarn npm publish --access public
+
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.CODEGEN_APP_ID }}
+          private-key: ${{ secrets.CODEGEN_APP_KEY }}
+
+      # bump to the next patch version
+      - name: Bump version
+        id: bump_version
+        run: |
+          VERSION=$(npm version patch --no-git-tag-version)
+          echo $VERSION
+          echo "::set-output name=next_version::$VERSION"
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: 'Bump to ${{ steps.bump_version.outputs.next_version }} (CI)'
+          add: 'package.json'
+          push: origin HEAD:main
