--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
   },
   "homepage": "https://github.com/aserto-dev/aserto-node#readme",
   "dependencies": {
-    "@aserto/node-authorizer": "^0.20.10",
-    "@aserto/node-directory": "^0.31.4",
-    "@bufbuild/protobuf": "^1.10.0",
-    "@connectrpc/connect": "^1.6.1",
-    "@connectrpc/connect-node": "^1.6.1",
+    "@aserto/node-authorizer": "https://github.com/aserto-dev/node-authorizer#connect_2",
+    "@aserto/node-directory": "https://github.com/aserto-dev/node-directory#connect_2",
+    "@bufbuild/protobuf": "^2.2.2",
+    "@connectrpc/connect": "^2.0.0",
+    "@connectrpc/connect-node": "^2.0.0",
     "express": "^4.21.1",
     "jwt-decode": "^4.0.0"
   },
