--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-prune": "^0.10.3",
-    "typescript": "^5.6.3"
+    "typescript": "5.6.3"
   },
   "packageManager": "yarn@4.5.1"
 }
