--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,15 +7,9 @@ env:
   VAULT_ADDR: https://vault.eng.aserto.com/
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ vars.CODEGEN_APP_ID }}
-          private-key: ${{ secrets.CODEGEN_APP_KEY }}
-
       - name: Read Configuration
         uses: hashicorp/vault-action@v3
         id: vault
@@ -26,8 +20,6 @@ jobs:
             kv/data/npmjs "NPM_TOKEN" | NODE_AUTH_TOKEN;
 
       - uses: actions/checkout@v4
-        with:
-          token: ${{ steps.app-token.outputs.token }}
 
       - uses: actions/setup-node@v4
         with:
@@ -37,6 +29,7 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+
       - uses: actions/cache@v4
         id: yarn-cache
         with:
@@ -49,6 +42,21 @@ jobs:
 
       - run: yarn install --immutable
       - run: yarn npm publish --access public
+
+  bump_version:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.CODEGEN_APP_ID }}
+          private-key: ${{ secrets.CODEGEN_APP_KEY }}
+
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          ref: 'main'
 
       # bump to the next patch version
       - name: Bump version
@@ -64,4 +72,3 @@ jobs:
           default_author: github_actions
           message: 'Bump to ${{ steps.bump_version.outputs.next_version }} (CI)'
           add: 'package.json'
-          push: origin HEAD:main
