--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -62,10 +62,10 @@ jobs:
 
       - run: yarn install --immutable
       - name: tests
-        run: yarn test --verbose
+        run: yarn test
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           files: ./coverage/coverage-final.json
 
